fix #100 distorted heatmap

--- a/src/style.scss
+++ b/src/style.scss
@@ -55,6 +55,7 @@ $app-margin-top: 50;
   display: flex;
   flex-direction: column;
   margin: $app-margin-top+px 20px 20px;
+  height: calc(100vh - 70px);
 }
 
 #caleydoHeader {
@@ -382,6 +383,7 @@ select.form-control {
 }
 
 .comparison {
+  flex: 1 1 auto;
   display: flex;
   flex-direction: row;
   align-items: stretch;
